<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/title_selector_type"
            android:textSize="20dp"
            android:textStyle="bold" />
        <!-- When you use image view then the attribute "android:clickable" must be set to "true" -->

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/image_selector"
            android:text="@string/image_selector" />

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/color_selector"
            android:text="@string/single_color_selector" />

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/two_color_gradiant_selector"
            android:text="@string/two_color_selector" />

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/three_color_gradiant_selector"
            android:text="@string/three_color_selector" />

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dip"
            android:textStyle="bold"
            android:background="@drawable/color_selector"
            android:text="@string/gradiant_font_selector"
            android:textColor="@color/text_selector" />
    </LinearLayout>

</ScrollView>